[SPR-194] fix : 숏츠 업로드 fcm주석 처리